# robodog_old_urdf

./: README.md
src/rover_gazebosim/: package.xml  setup.cfg  setup.py
src/rover_gazebosim/config/: controllers.yaml  parameter_bridge.yaml
src/rover_gazebosim/launch/: spawn_rover.launch.py
src/rover_gazebosim/meshes/: body.STL  lb.STL  lbc.STL  lbt.STL  lf.STL  lfc.STL  lft.STL  rb.STL  rbc.STL  rbt.STL  rf.STL  rfc.STL  rft.STL  rgbd.STL
src/rover_gazebosim/rover_gazebosim/: gazebo_bridge_node
src/rover_gazebosim/urdf/: bot_collision_assem_urdf_2.csv  rover.urdf
src/rover_gazebosim/worlds/: world.sdf
